@@ -85,6 +85,7 @@ extern int memory_current_screen;
 extern libspectrum_word memory_screen_mask;
 
 int memory_init( void );
+void memory_end( void );
 libspectrum_byte *memory_pool_allocate( size_t length );
 libspectrum_byte *memory_pool_allocate_persistent( size_t length,
                                                    int persistent );
