@@ -33,6 +33,7 @@ int mempool_register_pool( void );
 void* mempool_alloc( int pool, size_t size );
 char* mempool_strdup( int pool, const char *string );
 void mempool_free( int pool );
+void mempool_end( void );
 
 /* Unit test helper routines */
 
