@@ -136,6 +136,7 @@ int snapshot_write( const char *filename )
 
   flags = 0;
   length = 0;
+  buffer = NULL;
   error = libspectrum_snap_write( &buffer, &length, &flags, snap, type,
 				  fuse_creator, 0 );
   if( error ) { libspectrum_snap_free( snap ); return error; }
